--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   flutter_dotenv: ^6.0.0
   flutter_secure_storage: ^9.2.4
   jwt_decoder: ^2.0.1
+  geolocator: ^14.0.2
 
 dev_dependencies:
   flutter_test:
